--- a/src/components/site-info.css
+++ b/src/components/site-info.css
@@ -11,7 +11,7 @@
     align-self: stretch;
     display: grid;
     font-size: calc(2vh + 2vw + .5vmin);
-    grid-template-rows: auto;
+    grid-template-rows: auto auto auto auto auto auto;
 }
 
 
